# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Application.cpp  Application.h  main.cpp
src/core/: Application.cpp  Application.h
src/platform/: dx12_win32.cpp  render.cpp  render.h
src/platform/render/: dx12_win32.cpp  dx12_win32.h  win32_dx11.cpp  win32_dx11.h
